--- a/MainPage.html
+++ b/MainPage.html
@@ -12,7 +12,9 @@
 
     <h4>Current score:</h4>
 
-    <h4 id="score">(User) 0 - 0 (Computer)</h4>
+    <h4>
+      (User) <span id="scoreU">0</span> - <span id="scoreC">0</span> (Computer)
+    </h4>
 
     <div id="results"></div>
 
