--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="MainPageStyle.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock,Paper,Scissors Game</title>
   </head>
   <body>
@@ -13,10 +13,13 @@
     <h4>Current score:</h4>
 
     <h4>
-      (User) <span id="scoreU">0</span> - <span id="scoreC">0</span> (Computer)
+      (User) <span id="userScoreDisplay">0</span> -
+      <span id="computerScoreDisplay">0</span> (Computer)
     </h4>
 
-    <div id="results"></div>
+    <div id="userChoiceDisplay"></div>
+    <div id="computerChoiceDisplay"></div>
+    <div id="finalResultsDisplay"></div>
 
     <div class="images">
       <img src="Images/Rock.png" id="Rock" data-value="Rock" alt="Rock_Image" />
@@ -34,6 +37,6 @@
       />
     </div>
 
-    <script src="RPSfunction.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
