--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <span id="computerScoreDisplay">0</span> (Computer)
     </h4>
 
-    <div id="userChoiceDisplay"></div>
-    <div id="computerChoiceDisplay"></div>
-    <div id="finalResultsDisplay"></div>
+    <div class="game-results" id="userChoiceDisplay"></div>
+    <div class="game-results" id="computerChoiceDisplay"></div>
+    <div class="game-results" id="finalResultsDisplay"></div>
 
     <div class="images">
       <img src="Images/Rock.png" id="Rock" data-value="Rock" alt="Rock_Image" />
